--- a/main.css
+++ b/main.css
@@ -6,16 +6,28 @@ p{
 
 }
 a{
+	color: #ff4081;
+	transition: 0.5ms, ease-in-out;
 
+}
+a:hover,
+a:active,
+a:focus
+{
+	color: #212121;
 }
 ol{
 	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 li{
 
 }
 ul{
 	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 .hero{
 	width: auto;
@@ -32,9 +44,8 @@ main{
 	max-width: 800px;
 	margin: 0 400px;
 }
-.news-list {
+.news-list  {
 	font-size: 20px;
-
 	
 }
 .news-list-item{
@@ -49,13 +60,29 @@ main{
 .news-link{
 	display: block;
 	padding-bottom: 10px;
+	color: #212121;
 }
 .news-like li{
 	display: inline;
 	padding-right: 2px;
-
+}
+form{
+	opacity: 0;
+	visibility: hidden;
 
 }
-.news-like a,.add-link {
-color: #ff4081;
+label{
+ display: block;
+ font-weight: bold;
+ padding-bottom: 5px;
 }
+input{
+	width: 100%;
+	padding: 10px;
+	font-size: 20px;
+	border-radius: 4px;
+	border: 1px solid #212121;
+	margin-bottom: 10px;
+	box-sizing: border-box;
+}
+
